fixed wrap background between page 3 & 4

--- a/style.css
+++ b/style.css
@@ -427,52 +427,14 @@ body{
   background-attachment: fixed;
   height: 500px;
 }
-
-/* *{
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
-} */
-/* .section-1 {
-  width: 100%;
-  height: 600px;
+.fixedbg2{
+  background-image: url(img_ourpeople.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  height: 500px;
 }
 
-.section-1 .box{
-  height: 100vh;
-  background-attachment: fixed;
-  background-size: cover;
-} */
-
-
-/* figure{
-  position: relative;
-  width: 100%;
-  height: 60%;
-  margin: 0:important;
-} */
-/* .fixed-wrap { */
-  /* clip: rect(0, auto, auto, 0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-} */
-/* #fixed {
-  background-image: url(bgpage2.png);
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-  will-change: transform;
-} */
+}
 
 /* BOOTSTRAP PADDING FIX */
 [class="col-"] {
